--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "socket-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build-ts": "tsc",
+    "postinstall": "npm run build-ts",
+    "start": "npm run serve",
+    "serve": "node dist/server.js",
+    "watch-node": "nodemon dist/server.js",
+    "watch-ts": "tsc -w"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +18,9 @@
     "cors": "^2.8.4",
     "express": "^4.16.4",
     "socket.io": "^2.1.1"
+  },
+  "engines": {
+    "node": "8.11.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.4",
