--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "8.11.4"
+  },
   "dependencies": {
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.4",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+     "typescript": "^3.0.1",
+    "nodemon": "^1.18.3"
   },
-  "engines": {
-    "node": "8.11.4"
-  },
+  
   "devDependencies": {
     "@types/cors": "^2.8.4",
     "@types/express": "^4.16.0",
