--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "dist/server.js",
   "scripts": {
     "build-ts": "tsc",
+    "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "postinstall": "npm run build-ts",
     "start": "npm run serve",
     "serve": "node dist/server.js",
+    "test": "jest src",
     "watch-node": "nodemon dist/server.js",
     "watch-ts": "tsc -w"
   },
@@ -15,19 +17,51 @@
   "license": "ISC",
   "engines": {
     "node": "8.11.4"
+  },"jest": {
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
+  },
+  
+  "devDependencies": {
+    "@types/jest": "^23.3.1",
+    "jest": "^23.5.0",
+    "nodemon": "^1.18.3",
+    "prettier": "^1.14.2",
+    "supertest": "^3.1.0",
+    "ts-jest": "^23.1.4",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.15.0",
+    "tslint-plugin-prettier": "^1.3.0",
+    "typescript": "^3.0.1"
+
+    "@types/cors": "^2.8.4",
+    "@types/express": "^4.16.0",
+    "@types/socket.io": "^2.1.0"
   },
   "dependencies": {
+    "@types/express": "^4.16.0",
+    "@types/pg": "^7.4.10",
+    "express": "^4.16.3",
+    "pg": "^7.4.3"
+    
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.4",
     "socket.io": "^2.1.1",
      "typescript": "^3.0.1",
     "nodemon": "^1.18.3"
-  },
-  
-  "devDependencies": {
-    "@types/cors": "^2.8.4",
-    "@types/express": "^4.16.0",
-    "@types/socket.io": "^2.1.0"
+
+
   }
+
 }
