--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
     "tslint-plugin-prettier": "^1.3.0",
-    "typescript": "^3.0.1"
+    "typescript": "^3.0.1",
 
     "@types/cors": "^2.8.4",
     "@types/express": "^4.16.0",
@@ -52,8 +52,8 @@
     "@types/express": "^4.16.0",
     "@types/pg": "^7.4.10",
     "express": "^4.16.3",
-    "pg": "^7.4.3"
-    
+    "pg": "^7.4.3",
+
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.4",
