--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "socket-server",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/server.js",
+  "main": "dist/index.js",
   "scripts": {
     "build-ts": "tsc",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "postinstall": "npm run build-ts",
     "start": "npm run serve",
-    "serve": "node dist/server.js",
+    "serve": "node dist/index.js",
     "test": "jest src",
-    "watch-node": "nodemon dist/server.js",
+    "watch-node": "nodemon dist/index.js",
     "watch-ts": "tsc -w"
   },
   "author": "",
